--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/fcm": "^4.4.2",
-    "@ionic-native/firebase": "^4.4.2",
+    "@ionic-native/firebase": "^4.5.2",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/push": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -30,7 +30,7 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-firebase": "^0.1.24",
+    "cordova-plugin-firebase": "^0.1.25",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -39,6 +39,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "prod": "1.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -54,12 +55,12 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-sqlite-storage": {},
-      "cordova-plugin-firebase": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
