--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@ionic-native/fcm": "^4.4.2",
     "@ionic-native/firebase": "^4.5.2",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/native-ringtones": "^4.5.2",
     "@ionic-native/push": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^6.0.0",
     "cordova-plugin-firebase": "^0.1.25",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-media": "^5.0.0",
+    "cordova-plugin-native-ringtones": "^0.2.5",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.1.2",
@@ -60,7 +64,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-native-ringtones": {}
     },
     "platforms": [
       "android"
